--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </article>
     </main>
     <footer>
-        <p><em>Site criado por <a href="https://neo-tx.github.io/" target="_blank">Neo TX</a> para o <a href="https://www.cursoemvideo.com/">CursoemVideo</a></em></p>
+        <p><em>Site criado por <a href="https://github.com/Neo-TX" target="_blank">Neo TX</a> para o <a href="https://www.cursoemvideo.com/">CursoemVideo</a></em></p>
     </footer>
 </body>
 </html>
